# wingpanel-indicator-namarupa

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  com.github.donadigo.wingpanel-indicator-namarupa_1.0.0_amd64.deb  com.github.donadigo.wingpanel-indicator-namarupa_1.0.1_odin.deb  com.github.donadigo.wingpanel-indicator-namarupa_1.0.2_odin.deb  config.h.cmake  meson.build
debian/: changelog  control  copyright  files
src/: AyatanaIndicator.vala  CMakeLists.txt  Indicator.vala  IndicatorButton.vala  IndicatorFactory.vala  IndicatorIface.vala  IndicatorLoader.vala  IndicatorObject.vala  SubMenuButton.vala
vapi/: config.vapi  indicator3-0.4.vapi
